--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -2,4 +2,6 @@
 
 @import "reset.css";
 @import "settings/colors.css";
+@import "settings/fonts.css";
 @import "HomeHeader.css";
+@import "HomeThreeColumns.css";
